force-app/main/default/objects/vlocity_ps__ContextMappingArgument__c/fields/vlocity_ps__ArgumentSequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ArgumentSequence__c</fullName>
    <formula>vlocity_ps__FunctionArgumentId__r.vlocity_ps__Sequence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Argument Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>