force-app/main/default/objects/vlocity_ps__ContextMappingArgument__c/fields/vlocity_ps__ContextDimensionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ContextDimensionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Context Dimension</label>
    <referenceTo>vlocity_ps__ContextDimension__c</referenceTo>
    <relationshipLabel>Where Used (Vlocity Context Mapping Arguments)</relationshipLabel>
    <relationshipName>ContextMappingArguments</relationshipName>
    <type>Lookup</type>
</CustomField>