force-app/main/default/objects/vlocity_ps__ContextMappingArgument__c/fields/vlocity_ps__FunctionArgumentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FunctionArgumentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vlocity Function Argument</label>
    <referenceTo>vlocity_ps__VlocityFunctionArgument__c</referenceTo>
    <relationshipLabel>Where Used (Vlocity Context Mapping Arguments)</relationshipLabel>
    <relationshipName>ContextMappingArguments</relationshipName>
    <type>Lookup</type>
</CustomField>