force-app/main/default/objects/vlocity_ps__ContextMappingArgument__c/fields/vlocity_ps__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Value__c</fullName>
    <label>Type In Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>